Fixing search and question details layout.